--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .navigation-bar {
-  background-color: #352d2f;
+  background-color: white;
   height: 70px;
   width: 100%;
   text-align:center;
