--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -1,55 +1,55 @@
 body {
   margin: 0;
-  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.logo {
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
   float: left;
-}
-/* ~~ Top Navigation Bar ~~ */
-
-#navigation-container {
-  width: 1200px;
-  margin: 0 auto;
-  height: 70px;
-}
-
-.navigation-bar {
-  background-color: white;
-  height: 70px;
-  width: 100%;
-  text-align:center;
-}
-.navigation-bar img{
-float:left;
-}
-.navigation-bar ul {
-  padding: 0px;
-  margin: 0px;
+  display: block;
+  color: #f2f2f2;
   text-align: center;
-  display:inline-block;
-  vertical-align:top;
-}
-
-.navigation-bar li {
-  list-style-type: none;
-  padding: 0px;
-  height: 24px;
-  margin-top: 4px;
-  margin-bottom: 4px;
-  display: inline;
-}
-
-.navigation-bar li a {
-  color: black;
-  font-size: 16px;
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  padding: 14px 16px;
   text-decoration: none;
-  line-height: 70px;
-  padding: 5px 15px;
-  opacity: 0.7;
+  font-size: 17px;
 }
 
-#menu {
-  float: right;
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
