--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -52,3 +52,11 @@ body {
     float: none;
   }
 }
+
+.logo { 
+    max-height: 40px;
+    max-width: 30%; 
+    overflow: visible;
+    padding-top: 0;
+    padding-bottom: 0; 
+}
