--- a/css/style.css
+++ b/css/style.css
@@ -9704,3 +9704,11 @@ p,
   padding: 0;
   list-style-type: none;
 }
+
+.logo { 
+    max-height: 100px;
+    max-width: 50%; 
+    overflow: visible;
+    padding-top: 0;
+    padding-bottom: 0; 
+}
