--- a/css/style.css
+++ b/css/style.css
@@ -9264,7 +9264,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #FF4800 !important;
+  color: #542679 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
