--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -2,3 +2,49 @@
 	max-height: 5rem;
 	max-width: 5rem;
 }
+
+.astra-nav {
+	top: 0;
+	position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+
+.astra-nav-style {
+	color: #000!important;
+    background-color: #fff!important;
+    padding: 8px 16px!important;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    width: 100%;
+    overflow: hidden;
+}
+
+.astra-link-item {
+	padding: 8px 16px;
+    float: left;
+    width: auto;
+    border: none;
+    display: block;
+    outline: 0;
+}
+
+.astra-button {
+	white-space: normal;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+        border: none;
+    display: inline-block;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    color: inherit;
+    background-color: inherit;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+}
