--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -2,6 +2,12 @@ header {
     display: block;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    margin: 10px 0;
+}
+
 img {
 	vertical-align: middle;
 	border-style;
@@ -69,4 +75,30 @@ img {
     max-width: 980px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.astra-header-title-box {
+	margin-top: 16px!important;
+	text-align: center!important;
+	osition: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+.astra-header-title {
+	color: #fff!important;
+	font-size: 36px!important;
+}
+
+.astra-span {
+	color: #fff!important;
+    background-color: #000!important;
+    padding: 8px 16px!important;
+    opacity: 0.75;
+}
+
+.voyage-span {
+	color: #f1f1f1!important;
 }
