--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -80,7 +80,7 @@ img {
 .astra-header-title-box {
 	margin-top: 16px!important;
 	text-align: center!important;
-	osition: absolute;
+	position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
