--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -105,17 +105,24 @@ img {
 
 .astra-image {
       box-shadow: inset 0 0 0 1000px rgba(84, 38, 121, .3);
+      height: 100%;
+      width: 100%;
+      position: fixed;
       top: 0;
       left: 0;
       z-index: -3;
   }
-.astra-image:before {
-  content: "";
-  z-index: -1;
-  top: 0;
-  left: 0;
-  opacity: 0.3;
-}
+  .astra-image:before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      background: #000;
+      position: fixed;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      opacity: 0.3;
+  }
   @keyframes sf-fly-by-1 {
       from {
           transform: translateZ(-600px);
