--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -104,6 +104,7 @@ img {
 }
 
 .astra-image {
+      background: url("img/astra_voyage_background.png") no-repeat;
       box-shadow: inset 0 0 0 1000px rgba(84, 38, 121, .3);
       top: 0;
       left: 0;
