--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -151,6 +151,16 @@ img {
           opacity: 0.7;
       }
   }
+  @keyframes sf-fly-by-4 {
+      from {
+          transform: translateZ(-2700px);
+          opacity: 0.7;
+      }
+      to {
+          transform: translateZ(-300px);
+          opacity: 0.7;
+      }
+  }
   .star-field {
       top: 0;
       left: 0;
@@ -187,4 +197,7 @@ img {
   }
   .star-field .layer:nth-child(3) {
       animation: sf-fly-by-3 5s linear infinite;
+  }
+  .star-field .layer:nth-child(4) {
+      animation: sf-fly-by-4 5s linear infinite;
   }
