--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -89,6 +89,7 @@ img {
     max-width: 980px;
     margin-left: auto;
     margin-right: auto;
+    max-width:1500px;
 }
 
 .astra-header-title-box {
