--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -1,217 +1,30 @@
-header {
-    display: block;
+body {margin: 0;}
+
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Segoe UI",Arial,sans-serif;
-    font-weight: 400;
-    margin: 10px 0;
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-img {
-	vertical-align: middle;
-	border-style;
-}
+ul.topnav li a:hover:not(.active) {background-color: #111;}
 
-.logo {
-	max-height: 5rem;
-	max-width: 5rem;
-}
+ul.topnav li a.active {background-color: #04AA6D;}
 
-.astra-nav {
-	top: 0;
-	position: fixed;
-    width: 100%;
-    z-index: 1;
-}
+ul.topnav li.right {float: right;}
 
-.astra-nav-left {
-	text-align: left;
-	display:inline-block
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
 }
-
-.astra-nav-center {
-	text-align: center;
-	display:inline-block
-}
-
-.astra-nav-right {
-	text-align: right;
-	display:inline-block
-}
-
-.astra-nav-style {
-	color: #000!important;
-    background-color: #fff!important;
-    padding: 8px 16px!important;
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-    width: 100%;
-    overflow: hidden;
-}
-
-.astra-link-item {
-	padding: 8px 16px;
-    width: auto;
-    border: none;
-    display: block;
-    outline: 0;
-}
-
-.astra-button {
-	white-space: normal;
-	-webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-        border: none;
-    display: inline-block;
-    padding: 8px 16px;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    color: inherit;
-    background-color: inherit;
-    text-align: center;
-    cursor: pointer;
-    white-space: nowrap;
-}
-
-.astra-image {
-	max-width: 100%;
-    height: auto;
-}
-
-.astra-header {
-    position: relative;
-    letter-spacing: 4px;
-    max-width: 980px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.astra-header-title-box {
-	margin-top: 16px!important;
-	text-align: center!important;
-	position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-}
-
-.astra-header-title {
-	color: #fff!important;
-	font-size: 36px!important;
-}
-
-.astra-span {
-	color: #fff!important;
-    background-color: #000!important;
-    padding: 8px 16px!important;
-    opacity: 0.75;
-}
-
-.voyage-span {
-	color: #f1f1f1!important;
-}
-
-.astra-image {
-      box-shadow: inset 0 0 0 1000px rgba(84, 38, 121, .3);
-      height: 100%;
-      width: 100%;
-      top: 0;
-      left: 0;
-      z-index: -3;
-  }
-  .astra-image:before {
-      content: "";
-      width: 100%;
-      height: 100%;
-      background: #000;
-      z-index: -1;
-      top: 0;
-      left: 0;
-      opacity: 0.3;
-  }
-  @keyframes sf-fly-by-1 {
-      from {
-          transform: translateZ(-600px);
-          opacity: 0.7;
-      }
-      to {
-          transform: translateZ(0);
-          opacity: 0.7;
-      }
-  }
-  @keyframes sf-fly-by-2 {
-      from {
-          transform: translateZ(-1200px);
-          opacity: 0.7;
-      }
-      to {
-          transform: translateZ(-600px);
-          opacity: 0.7;
-      }
-  }
-  @keyframes sf-fly-by-3 {
-      from {
-          transform: translateZ(-1800px);
-          opacity: 0.7;
-      }
-      to {
-          transform: translateZ(-1200px);
-          opacity: 0.7;
-      }
-  }
-  @keyframes sf-fly-by-4 {
-      from {
-          transform: translateZ(-2700px);
-          opacity: 0.7;
-      }
-      to {
-          transform: translateZ(-300px);
-          opacity: 0.7;
-      }
-  }
-  .star-field {
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      perspective: 600px;
-      -webkit-perspective: 600px;
-      z-index: -1;
-  }
-  .star-field .layer {
-      box-shadow: -411px -476px #cccccc, 777px -407px #d4d4d4, -387px -477px #fcfcfc, -91px -235px #d4d4d4, 491px -460px #f7f7f7, 892px -128px #f7f7f7, 758px -277px #ededed, 596px 378px #cccccc, 647px 423px whitesmoke, 183px 389px #c7c7c7,
-          524px -237px #f0f0f0, 679px -535px #e3e3e3, 158px 399px #ededed, 157px 249px #ededed, 81px -450px #ebebeb, 719px -360px #c2c2c2, -499px 473px #e8e8e8, -158px -349px #d4d4d4, 870px -134px #cfcfcf, 446px 404px #c2c2c2,
-          440px 490px #d4d4d4, 414px 507px #e6e6e6, -12px 246px #fcfcfc, -384px 369px #e3e3e3, 641px -413px #fcfcfc, 822px 516px #dbdbdb, 449px 132px #c2c2c2, 727px 146px #f7f7f7, -315px -488px #e6e6e6, 952px -70px #e3e3e3,
-          -869px -29px #dbdbdb, 502px 80px #dedede, 764px 342px #e0e0e0, -150px -380px #dbdbdb, 654px -426px #e3e3e3, -325px -263px #c2c2c2, 755px -447px #c7c7c7, 729px -177px #c2c2c2, -682px -391px #e6e6e6, 554px -176px #ededed,
-          -85px -428px #d9d9d9, 714px 55px #e8e8e8, 359px -285px #cfcfcf, -362px -508px #dedede, 468px -265px #fcfcfc, 74px -500px #c7c7c7, -514px 383px #dbdbdb, 730px -92px #cfcfcf, -112px 287px #c9c9c9, -853px 79px #d6d6d6,
-          828px 475px #d6d6d6, -681px 13px #fafafa, -176px 209px #f0f0f0, 758px 457px #fafafa, -383px -454px #ededed, 813px 179px #d1d1d1, 608px 98px whitesmoke, -860px -65px #c4c4c4, -572px 272px #f7f7f7, 459px 533px #fcfcfc,
-          624px -481px #e6e6e6, 790px 477px #dedede, 731px -403px #ededed, 70px -534px #cccccc, -23px 510px #cfcfcf, -652px -237px whitesmoke, -690px 367px #d1d1d1, 810px 536px #d1d1d1, 774px 293px #c9c9c9, -362px 97px #c2c2c2,
-          563px 47px #dedede, 313px 475px #e0e0e0, 839px -491px #e3e3e3, -217px 377px #d4d4d4, -581px 239px #c2c2c2, -857px 72px #cccccc, -23px 340px #dedede, -837px 246px white, 170px -502px #cfcfcf, 822px -443px #e0e0e0, 795px 497px #e0e0e0,
-          -814px -337px #cfcfcf, 206px -339px #f2f2f2, -779px 108px #e6e6e6, 808px 2px #d4d4d4, 665px 41px #d4d4d4, -564px 64px #cccccc, -380px 74px #cfcfcf, -369px -60px #f7f7f7, 47px -495px #e3e3e3, -383px 368px #f7f7f7, 419px 288px #d1d1d1,
-          -598px -50px #c2c2c2, -833px 187px #c4c4c4, 378px 325px whitesmoke, -703px 375px #d6d6d6, 392px 520px #d9d9d9, -492px -60px #c4c4c4, 759px 288px #ebebeb, 98px -412px #c4c4c4, -911px -277px #c9c9c9;
-      transform-style: preserve-3d;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      height: 4px;
-      width: 4px;
-      border-radius: 2px;
-  }
-  .star-field .layer:nth-child(1) {
-      animation: sf-fly-by-1 5s linear infinite;
-  }
-  .star-field .layer:nth-child(2) {
-      animation: sf-fly-by-2 5s linear infinite;
-  }
-  .star-field .layer:nth-child(3) {
-      animation: sf-fly-by-3 5s linear infinite;
-  }
-  .star-field .layer:nth-child(4) {
-      animation: sf-fly-by-4 5s linear infinite;
-  }
