--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -5,7 +5,7 @@ ul.topnav {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #542679;
 }
 
 ul.topnav li {float: left;}
@@ -18,9 +18,12 @@ ul.topnav li a {
   text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+ul.topnav li a:hover:not(.active) {background-color: #36184e;}
 
-ul.topnav li a.active {background-color: #04AA6D;}
+ul.topnav li a.active {
+  background-color: white;
+  color: #542679;
+}
 
 ul.topnav li.right {float: right;}
 
