--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -1,43 +1,56 @@
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-ul.astra-voyage-nav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.topnav {
+  position: relative;
   overflow: hidden;
-  background-color: #542679;
+  background-color: #333;
 }
 
-ul.astra-voyage-nav li {
+.topnav a {
   float: left;
-}
-
-ul.astra-voyage-nav li a {
-  display: block;
-  color: white;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
 }
 
-ul.astra-voyage-nav li a:hover:not(.active) {
-  background-color: #36184e;
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-ul.astra-voyage-nav li a.active {
-  background-color: white;
-  color: #542679;
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
 }
 
-ul.astra-voyage-nav li.right {
+.topnav-centered a {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.topnav-right {
   float: right;
 }
 
+/* Responsive navigation menu (for mobile devices) */
 @media screen and (max-width: 600px) {
-  ul.astra-voyage-nav li.right, 
-  ul.astra-voyage-nav li {
+  .topnav a, .topnav-right {
     float: none;
+    display: block;
+  }
+  
+  .topnav-centered a {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
   }
 }
