--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -1,4 +1,6 @@
-body {margin: 0;}
+body {
+  margin: 0;
+}
 
 ul.topnav {
   list-style-type: none;
@@ -8,7 +10,13 @@ ul.topnav {
   background-color: #333;
 }
 
-ul.topnav li {float: left;}
+ul.topnav li.left {
+  float: left;
+}
+
+ul.topnav li.right {
+  float: right;
+}
 
 ul.topnav li a {
   display: block;
@@ -18,11 +26,14 @@ ul.topnav li a {
   text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+ul.topnav li a:hover:not(.active) {
+  background-color: #111;
+}
 
-ul.topnav li a.active {background-color: #04AA6D;}
+ul.topnav li a.active {
+  background-color: #04AA6D;
+}
 
-ul.topnav li.right {float: right;}
 
 @media screen and (max-width: 600px) {
   ul.topnav li.right, 
