--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -4,7 +4,8 @@ body {
 
 ul.topnav {
   list-style-type: none;
-  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
   padding: 0;
   overflow: hidden;
   background-color: #333;
