--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -4,11 +4,11 @@ body {
 
 ul.topnav {
   list-style-type: none;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  text-align:center;
 }
 
 ul.topnav li.left {
