--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -48,7 +48,7 @@ ul.topnav li a.active {
 
 @media screen and (max-width: 600px) {
   ul.topnav li.center, ul.topnav li {
-    display: none;
+    display: inline;
   }
 }
 
