--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -7,7 +7,7 @@ ul.topnav {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #542679;
   text-align:center;
 }
 
@@ -32,11 +32,13 @@ ul.topnav li a {
 }
 
 ul.topnav li a:hover:not(.active) {
-  background-color: #111;
+  color: #542679;
+  background-color: #f3ecf9;
 }
 
 ul.topnav li a.active {
-  background-color: #04AA6D;
+   color: #542679;
+  background-color: #f3ecf9;
 }
 
 
