--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -32,12 +32,12 @@ ul.topnav li a {
 }
 
 ul.topnav li a:hover:not(.active) {
-  color: #542679;
+  color: #ffffff;
   background-color: #dbc5ed;
 }
 
 ul.topnav li a.active {
-  color: #542679;
+  color: #ffffff;
   background-color: #dbc5ed;
 }
 
