--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -1,5 +1,16 @@
 body {
   margin: 0;
+  background-color: #000;
+}
+
+.main{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: 10px;
+    width: 10px;
+    background-color: #fff;
+    border-radius: 50%;
 }
 
 ul.topnav {
