--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -3,158 +3,27 @@ body {
   background-color: #000;
 }
 
-$pi: 3.14159265359;
-$_precision: 10;
-
-@function pow($base, $exp) {
-  $value: $base;
-  @if $exp > 1 {
-    @for $i from 2 through $exp {
-      $value: $value * $base;
-    }
-  }
-  @if $exp < 1 {
-    @for $i from 0 through -$exp {
-      $value: $value / $base;
-    }
-  }
-  @return $value;
-}
-
-@function fact($num) {
-  $fact: 1;
-  @if $num > 0 {
-    @for $i from 1 through $num {
-      $fact: $fact * $i;
-    }
-  }
-  @return $fact;
-}
-
-@function _to_unitless_rad($angle) {
-  @if unit($angle) == "deg" {
-    $angle: $angle / 180deg * $pi;
-  }
-  @if unit($angle) == "rad" {
-    $angle: $angle / 1rad;
-  }
-  @return $angle;
-}
-
-@function sin($angle) {
-  $a: _to_unitless_rad($angle);
-  $sin: $a;
-  @for $n from 1 through $_precision {
-    $sin: $sin + (pow(-1, $n) / fact(2 * $n + 1)) * pow($a, (2 * $n + 1));
-  }
-  @return $sin;
-}
-
-@function cos($angle) {
-  $a: _to_unitless_rad($angle);
-  $cos: 1;
-  @for $n from 1 through $_precision {
-    $cos: $cos + (pow(-1, $n) / fact(2 * $n)) * pow($a, 2 * $n);
-  }
-  @return $cos;
-}
-
-@function tan($angle) {
-  @return sin($angle) / cos($angle);
-}
-
-@function reminder($origin, $mod) {
-  $q: if(($origin / $mod) > 0, floor($origin / $mod), ceil($origin / $mod));
-  @return $origin - ($mod * $q);
-}
-
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-.stars-outer {
-  width: 100%;
-  height: 100%;
-  background: rgb(0, 0, 0);
-  background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgb(0, 10, 24) 100%);
-}
-
-#stars-sky {
+#sky {
   width: 100%;
   height: 100%;
   position: relative;
-  overflow: hidden;
+  background: black;
 }
 
-.stars-star {
-  opacity: 0;
-  transform-origin: 0, 0;
-  position: absolute;
-  background: white;
-  box-shadow: 0px 0px 20px 0px rgb(255, 255, 255);
-  border-radius: 100%;
-  animation-timing-function: linear, linear !important;
-  animation-iteration-count: infinite, infinite !important;
-  animation-delay: -30s, -30s !important;
+.star {
+  background-color: white;
+  position: relative;
+  border-radius: 50%;
+  animation-name: twinkle;
+  animation-iteration-count: infinite;
 }
 
-.stars-size-1 {
-  width: 0.5px;
-  height: 0.5px;
-}
 
-.stars-size-2 {
-  width: 1px;
-  height: 1px;
-}
-
-.stars-size-3 {
-  width: 2px;
-  height: 2px;
-}
-
-@for $i from 1 to 360 {
-  $t: random(40000) + 5000;
-  $angle: $i - reminder($i, 4);
-  .stars-axis-#{$i} {
-    animation: anim#{$angle} #{$t}ms, fade#{random(10)} #{$t}ms;
+@keyframes twinkle {
+  50% {
+    transform: scale(0.2);   
   }
-}
-
-// FADE EFFECT
-@for $i from 1 to 11 {
-  $start: random(20);
-  $end: $start + 10;
-  @keyframes fade#{$i} {
-    #{$start + "%"} {
-      opacity: 0;
-    }
-    #{$end + "%"} {
-      opacity: 1;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-}
-
-// MOVE ANIMATION
-@for $i from 1 to 91 {
-  $a: $i * 4;
-  @keyframes anim#{$a} {
-    $angle: $pi * 2 * ($a / 360);
-    $y: 80 * sin($angle);
-    $x: 80 * cos($angle);
-    100% {
-      transform: translate(#{$x}vw, #{$y}vh);
-    }
-  }
-}
-
-
+} 
 
 ul.topnav {
   list-style-type: none;
