--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -3,28 +3,6 @@ body {
   background-color: black;
 }
 
-.astra-voyage-body {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  background: black;
-}
-
-.star {
-  background-color: white;
-  position: relative;
-  border-radius: 50%;
-  animation-name: twinkle;
-  animation-iteration-count: infinite;
-}
-
-
-@keyframes twinkle {
-  50% {
-    transform: scale(0.2);   
-  }
-} 
-
 ul.topnav {
   list-style-type: none;
   margin: 0;
@@ -91,10 +69,67 @@ ul.topnav li a.active {
   }
 }
 
-
-.astra-voyage-header {
-  color: white;
-  background-color: black;
-  font-weight: bold;
-  text-align: center;
+@keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-webkit-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-moz-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-ms-keyframes move-clouds-back {
+    from {background-position: 0;}
+    to {background-position:10000px 0;}
+}
+.stars, .twinkling, .clouds {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+.stars {
+  background:#000 url(images/stars.png) repeat top center;
+  z-index:0;
+}
+.twinkling{
+  background:transparent url(images/twinkling.png) repeat top center;
+  z-index:1;
+  -moz-animation:move-twink-back 200s linear infinite;
+  -ms-animation:move-twink-back 200s linear infinite;
+  -o-animation:move-twink-back 200s linear infinite;
+  -webkit-animation:move-twink-back 200s linear infinite;
+  animation:move-twink-back 200s linear infinite;
+}
+.clouds{
+    background:transparent url(images/clouds.png) repeat top center;
+    z-index:3;
+  -moz-animation:move-clouds-back 200s linear infinite;
+  -ms-animation:move-clouds-back 200s linear infinite;
+  -o-animation:move-clouds-back 200s linear infinite;
+  -webkit-animation:move-clouds-back 200s linear infinite;
+  animation:move-clouds-back 200s linear infinite;
 }
