--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -31,7 +31,7 @@
     from {background-position: 0;}
     to {background-position:10000px 0;}
 }
-.stars, .twinkling, .clouds {
+.stars, .twinkling {
   position:absolute;
   top:0;
   left:0;
@@ -53,13 +53,4 @@
   -o-animation:move-twink-back 200s linear infinite;
   -webkit-animation:move-twink-back 200s linear infinite;
   animation:move-twink-back 200s linear infinite;
-}
-.clouds{
-    background:transparent url(images/clouds.png) repeat top center;
-    z-index:3;
-  -moz-animation:move-clouds-back 200s linear infinite;
-  -ms-animation:move-clouds-back 200s linear infinite;
-  -o-animation:move-clouds-back 200s linear infinite;
-  -webkit-animation:move-clouds-back 200s linear infinite;
-  animation:move-clouds-back 200s linear infinite;
 }
