--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -1,100 +1,29 @@
 body {
   margin: 0;
-  background-color: black;
-}
-
-.astra-voyage-body {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  background: black;
-}
-
-.star {
-  background-color: white;
-  position: relative;
-  border-radius: 50%;
-  animation-name: twinkle;
-  animation-iteration-count: infinite;
-}
-
-
-@keyframes twinkle {
-  50% {
-    transform: scale(0.2);   
-  }
-} 
-
-ul.topnav {
-  list-style-type: none;
-  margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #542679;
-  text-align:center;
 }
 
-ul.topnav li.left {
-  float: left;
-}
+@keyframes move-background {
+  from {
+    left: -1000px
+  }
 
-ul.topnav li.center {
-  display: inline-block;
-}
-
-ul.topnav li.right {
-  float: right;
-}
-
-.astra-logo-link {
-  display: inline-flex;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.astra-nav-link {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-ul.topnav li a:hover:not(.active) {
-  color: #ffffff;
-  background-color: #dbc5ed;
-}
-
-ul.topnav li a.active {
-  color: #ffffff;
-  background-color: #dbc5ed;
-}
-
-
-@media screen and (max-width: 600px) {
-  ul.topnav li.right, ul.topnav li {
-    float: none;
+  to {
+    left: 1000px;
   }
 }
 
-@media screen and (max-width: 600px) {
-  ul.topnav li.center, ul.topnav li {
-    display: inline;
-  }
+.twinkle {
+  animation: move-background 100s linear infinite;
+  background: url('img/twinkling.png') repeat;
 }
 
-@media screen and (max-width: 600px) {
-  ul.topnav li.left, ul.topnav li {
-    float: none;
-  }
+.star-container {
+  background: black url('img/stars.png') repeat;
 }
 
-
-.astra-voyage-header {
-  color: white;
-  background-color: black;
-  font-weight: bold;
-  text-align: center;
+.twinkle, .star-container {
+  height: 15000px;
+  position: absolute; 
+  width: 15000px;
 }
