--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -137,3 +137,18 @@ ul.topnav li a.active {
 .astra-voyage-header-subtitle {
   color: white;
 }
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  color: white;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
