--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -139,10 +139,11 @@ ul.topnav li a.active {
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
   width: 40%;
   color: white;
+  position: relative;
 }
 
 .card:hover {
