--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -141,7 +141,7 @@ ul.topnav li a.active {
 .card {
   box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
-  width: 40%;
+  width: 16rem;
   color: white;
   position: relative;
   margin: auto;
