--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -77,6 +77,7 @@ ul.topnav {
   overflow: hidden;
   background-color: #542679;
   text-align:center;
+  position: relative;
 }
 
 ul.topnav li.left {
