--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -106,6 +106,7 @@ ul.topnav li.right {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  position: relative;
 }
 
 ul.topnav li a:hover:not(.active) {
