--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -153,7 +153,7 @@ ul.topnav li a.active {
   color: white;
 }
 
-.card {
+.astra-voyage-validator {
   box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
   width: 16rem;
@@ -165,9 +165,26 @@ ul.topnav li a.active {
   background-color: rgb(84, 38, 121, 0.7);
 }
 
-.card:hover {
+.astra-voyage-validator:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
+.astra-voyage-team {
+  box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
+  transition: 0.3s;
+  width: 32rem;
+  color: white;
+  position: relative;
+  margin: auto;
+  border-radius: 16px;
+  text-align: center;
+  background-color: rgb(84, 38, 121, 0.7);
+}
+
+.astra-voyage-team:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 
 .container {
   padding: 2px 16px;
