--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -38,7 +38,9 @@ footer {
 }
 
 hr {
-  border: 3px solid white;
+  border: 1px solid white;
+  position: relative;
+  width: 66%;
 }
 
 @keyframes move-background {
