--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -175,6 +175,11 @@ ul.topnav li a.active {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
+.astra-voyage-validator-logo {
+  width:64px;
+  display: inline-block;
+}
+
 .astra-voyage-team {
   box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
@@ -194,5 +199,6 @@ ul.topnav li a.active {
 
 
 .container {
+  display: inline-block;
   padding: 2px 16px;
 }
