--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -162,7 +162,8 @@ ul.topnav li a.active {
 .astra-voyage-validator {
   box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
-  width: 16rem;
+  width: 18rem;
+  height: 10rem;
   color: white;
   position: relative;
   margin: auto;
