--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -15,7 +15,7 @@
 
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
+.col-3  {width: 25%;}
 .col-4 {width: 33.33%;}
 .col-5 {width: 41.66%;}
 .col-6 {width: 50%;}
@@ -25,6 +25,19 @@
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+
+
+@media screen and (max-width: 600px) {
+  .col-3 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .col-4 {
+    width: 100%;
+  }
+}
 
 body {
   margin: 0;
@@ -203,3 +216,4 @@ ul.topnav li a.active {
   display: inline-block;
   padding: 2px 16px;
 }
+
