--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -39,6 +39,12 @@
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .col-6 {
+    width: 100%;
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -211,7 +217,7 @@ ul.topnav li a.active {
   box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
   width: 24rem;
-  height: 28rem;
+  height: 24rem;
   color: white;
   position: relative;
   margin: auto;
@@ -222,6 +228,18 @@ ul.topnav li a.active {
 
 .astra-voyage-team:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+@media screen and (max-width: 1200px) {
+  .astra-voyage-team {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .astra-voyage-team {
+    width: 85%;
+  }
 }
 
 
