--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -231,6 +231,10 @@ ul.topnav li a.active {
   display: inline-block;
 }
 
+.astra-voyage-validator-logo:hover {
+  transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
 .astra-voyage-team {
   box-shadow: 0 4px 8px 0 rgba(255,255,255,0.2);
   transition: 0.3s;
