--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -271,9 +271,6 @@ ul.topnav li a.active {
 }
 
 .astra-voyage-validator-button {
-  background-color: white; /* Green */
-  border: none;
-  color: #542679;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
@@ -282,12 +279,18 @@ ul.topnav li a.active {
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-}
 
-.astra-voyage-validator-button:hover {
   color: white;
   background-color: #542679;
   border: 2px solid white;
+  border-radius: 16px;
+}
+
+.astra-voyage-validator-button:hover {
+  color: #542679;
+  background-color: white; 
+  border: none;
+  border-radius: 16px;
 }
 
 
