--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -296,7 +296,7 @@ ul.topnav li a.active {
 
 .astra-voyage-container {
   margin-top: 8rem;
-  margin-bottom: 0;
+  margin-bottom: 8rem;
   margin-left: 0;
   margin-right: 0;
   padding: 0;
