--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -142,7 +142,7 @@ ul.topnav li.right {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: xx-large;
+  font-size: x-large;
 }
 
 .astra-nav-link {
@@ -152,7 +152,7 @@ ul.topnav li.right {
   padding: 14px 16px;
   text-decoration: none;
   position: relative;
-  font-size: xx-large;
+  font-size: x-large;
 }
 
 ul.topnav li a:hover:not(.active) {
@@ -188,7 +188,7 @@ ul.topnav li a.active {
 .astra-voyage-header {
   text-align: center;
   position: relative;
-  font-size: x-large;
+  font-size: large;
 }
 
 .astra-voyage-header-title {
