--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -188,7 +188,7 @@ ul.topnav li a.active {
 .astra-voyage-header {
   text-align: center;
   position: relative;
-  font-size: large;
+  font-size: x-large;
 }
 
 .astra-voyage-header-title {
