--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -101,13 +101,14 @@ hr {
 }
 
 .twinkle {
+  height: 15000px;
   position: fixed; 
   width: 100vw;
 }
 
 .star-container {
   height: 15000px;
-  position: absolute; 
+  position: fixed; 
   width: 100vw;
 }
 
