--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -70,10 +70,18 @@ body {
 }
 
 footer {
-  text-align: center;
-  color: white;
-  position: relative;
-  background-color: #542679;
+  footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #542679;;
+    background-color: #542679;
+    height: auto;
+    width: 100vw;
+    padding-top: 40px;
+    color: white;
+}
 }
 
 hr {
@@ -356,5 +364,43 @@ ul.topnav li a.active {
 
 .astra-voyage-bottom-nav {
   margin-top: 2rem;
+}
+
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+
+.socials li{
+    margin: 0 10px;
+}
+
+.socials a{
+    text-decoration: none;
+    color: #fff;
+    border: 1.1px solid white;
+    padding: 5px;
+    border-radius: 50%;
+}
+
+.socials a i{
+    font-size: 1.1rem;
+    width: 20px;
+    transition: color .4s ease;
+}
+
+.socials a:hover i{
+    color: aqua;
 }
 
