--- a/css/astra-style.css
+++ b/css/astra-style.css
@@ -414,7 +414,7 @@ ul.topnav li a.active {
    text-transform: capitalize;
 }
 .footer-bottom p a{
-  color:#44bae8;
+  color: white;
   font-size: 16px;
   text-decoration: none;
 }
